@@ -121,6 +121,7 @@ test/test_rdoc_markup_attribute_manager.rb
 test/test_rdoc_markup_document.rb
 test/test_rdoc_markup_paragraph.rb
 test/test_rdoc_markup_parser.rb
+test/test_rdoc_markup_pre_process.rb
 test/test_rdoc_markup_to_ansi.rb
 test/test_rdoc_markup_to_bs.rb
 test/test_rdoc_markup_to_html.rb
